ChatRoomList Item 수정
item_chat_room_list.xml
> 답장에 대한 요청 질문도 보일 수 있도록 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="transparent">#00FFFFFF</color>
 
     <color name="chat_count_icon_red">#FB3535</color>
+    <color name="chat_my_color">#66387DF7</color>
 </resources>
