ChatRoomList Item 수정
item_chat_room_list.xml
> 답장에 대한 요청 질문도 보일 수 있도록 수정
> 텍스트 컬러 변경

--- a/app/src/main/res/layout/item_chat_room_list.xml
+++ b/app/src/main/res/layout/item_chat_room_list.xml
@@ -56,16 +56,19 @@
                 android:background="@drawable/chat_content_right_text"
                 android:padding="5dp"
                 android:layout_marginBottom="5dp"
-                android:maxLines="1"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:textColor="@color/black"
                 android:text="로또 번호 알려줄래? 아리까아리까아리까아리까아리까아리까아리까"/>
 
             <TextView
                 android:id="@+id/chat_room_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/gray_60"
+                android:textColor="@color/gray_40"
                 android:text="GPT 답장 내용"
-                android:maxLines="5"/>
+                android:maxLines="5"
+                android:ellipsize="end"/>
 
         </LinearLayout>
 
