MainActivity 채팅 리스트 수정
ChatRoom 테이블에서 목록을 읽고, 마지막 Assistant 내용과 질문 내용을 읽어와 리사이클러뷰에 표시하도록 수정하였음.

--- a/app/src/main/res/layout/item_chat_room_list.xml
+++ b/app/src/main/res/layout/item_chat_room_list.xml
@@ -51,6 +51,7 @@
 
 
             <TextView
+                android:id="@+id/textView_question"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/chat_content_right_text"
@@ -62,7 +63,7 @@
                 android:text="로또 번호 알려줄래? 아리까아리까아리까아리까아리까아리까아리까"/>
 
             <TextView
-                android:id="@+id/chat_room_content"
+                android:id="@+id/textView_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/gray_40"
